<resources>
    <string name="app_name">Shoe-Store</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">LOGIN</string>
    <string name="logout">LOGOUT</string>
    <string name="username">Username</string>
    <string name="email_hint">abc@example.com</string>
    <string name="password">Password</string>
    <string name="password_hint">Enter your password.</string>
    <string name="signup_hint">SIGN UP</string>

    <string name="welcome">Welcome To Our Shoe-Store!</string>
    <string name="welcome_text">Keep navigating to find what you\'re looking for.</string>
    <string name="welcome_button">See Instructions</string>

    <string name="instructions">Instructions!</string>
    <string name="instructions_text">Click on the button to go to your shoe-list and fill the required information.</string>
    <string name="instructions_button">Shoe-List</string>

    <string name="shoe_name">Shoe Name: </string>
    <string name="shoe_company">Company Name: </string>
    <string name="shoe_size">Shoe size: </string>
    <string name="shoe_description">Description: </string>
    <string name="cancel">CANCEL</string>
    <string name="save">SAVE</string>

    <string name="shoe_name_data">Shoe Name: %s</string>
    <string name="shoe_company_data">Company Name: %s</string>
    <string name="shoe_size_data">Shoe size: %s</string>
    <string name="shoe_description_data">Description: %s</string>

    <string name="shoe_nameHint">Enter shoe name model.</string>
    <string name="shoe_companyHint">Enter company\'s name.   ex: Adidas</string>
    <string name="shoe_sizeHint">Enter shoe size.</string>
    <string name="shoe_descriptionHint">Type a short description about the shoe.</string>

</resources>