<?xml version="1.0" encoding="utf-8"?>

<!--used 'linear layout' since the views can be arranged vertically
    so there was no need to use 'constraint layout' and
    complicate the design-->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.shoeList.LoginScreenFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/medium_margin"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_marginRight="@dimen/medium_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/login"
            android:textColor="@color/purple_700"
            android:textSize="@dimen/largeText"
            android:textStyle="bold" />

        <TextView
            style="@style/TextViews"
            android:text="@string/username" />

        <EditText
            android:id="@+id/email_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textSize="@dimen/smallText" />

        <TextView
            style="@style/TextViews"
            android:text="@string/password" />

        <EditText
            android:id="@+id/password_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textSize="@dimen/smallText" />


        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/large_margin"
            android:fontFamily="@font/roboto"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/mediumText"
            android:textStyle="bold" />

        <Button
            android:id="@+id/signup_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/small_margin"
            android:fontFamily="@font/roboto"
            android:text="@string/signup_hint"
            android:textColor="@color/white"
            android:textSize="@dimen/mediumText"
            android:textStyle="bold" />

    </LinearLayout>
</layout>