<?xml version="1.0" encoding="utf-8"?>

<!--used 'layout' to be able to use databinding and used 'constraint layout'
    to be able to arrange the views in horizontal and vertical manner at once,
    in addition to using chains and baseline to make the views cleanly arranged
    through the screen-->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.shoeList.ShoeDetailFragment">

    <data>
        <import type="com.example.shoe_store.Converters.IntConverter" />
        <variable
            name="shoe"
            type="com.example.shoe_store.ShoeData" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/medium_margin"
        android:layout_marginRight="@dimen/medium_margin">

        <TextView
            android:id="@+id/shoeName_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoe_name"
            android:textColor="@color/purple_700"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoeName_edittext"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/shoeName_edittext"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:inputType="text"
            android:text="@={shoe.ShoeName}"
            android:hint="@string/shoe_nameHint"
            app:layout_constraintBottom_toTopOf="@+id/shoeCompany_edittext"
            app:layout_constraintStart_toEndOf="@+id/shoeName_textview"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoe_company"
            android:textColor="@color/purple_700"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoeCompany_edittext"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/shoeCompany_edittext"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_margin"
            android:inputType="text"
            android:text="@={shoe.ShoeCompany}"
            android:hint="@string/shoe_companyHint"
            app:layout_constraintBottom_toTopOf="@+id/shoeSize_edittext"
            app:layout_constraintStart_toStartOf="@+id/shoeName_edittext"
            app:layout_constraintTop_toBottomOf="@+id/shoeName_edittext" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoe_size"
            android:textColor="@color/purple_700"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoeSize_edittext"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/shoeSize_edittext"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:text="@={IntConverter.intToString(shoe.shoeSize)}"
            android:hint="@string/shoe_sizeHint"
            app:layout_constraintBottom_toTopOf="@+id/shoeDescription_edittext"
            app:layout_constraintStart_toStartOf="@+id/shoeCompany_edittext"
            app:layout_constraintTop_toBottomOf="@+id/shoeCompany_edittext" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoe_description"
            android:textColor="@color/purple_700"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoeDescription_edittext"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/shoeDescription_edittext"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="@={shoe.shoeDescription}"
            android:hint="@string/shoe_descriptionHint"
            app:layout_constraintBottom_toTopOf="@+id/cancel_button"
            app:layout_constraintStart_toStartOf="@+id/shoeSize_edittext"
            app:layout_constraintTop_toBottomOf="@+id/shoeSize_edittext" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:backgroundTint="@android:color/holo_red_dark"
            android:fontFamily="@font/roboto"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/save_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoeDescription_edittext" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryDark"
            android:fontFamily="@font/roboto"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cancel_button"
            app:layout_constraintTop_toTopOf="@+id/cancel_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>