<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginScreenFragment">

    <fragment
        android:id="@+id/loginScreenFragment"
        android:name="com.example.shoe_store.LoginScreenFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login_screen">
        <action
            android:id="@+id/action_loginScreenFragment_to_welcomeOnboardingFragment"
            app:destination="@id/welcomeOnboardingFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_in_right"
            app:popEnterAnim="@anim/slide_out_right"
            app:popExitAnim="@anim/slide_out_left"
            app:popUpTo="@id/loginScreenFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/welcomeOnboardingFragment"
        android:name="com.example.shoe_store.WelcomeOnboardingFragment"
        android:label="@string/welcome"
        tools:layout="@layout/fragment_welcome_onboarding">
        <action
            android:id="@+id/action_welcomeOnboardingFragment_to_instructionsOnboardingFragment"
            app:destination="@id/instructionsOnboardingFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_in_right"
            app:popEnterAnim="@anim/slide_out_right"
            app:popExitAnim="@anim/slide_out_left" />
    </fragment>
    <fragment
        android:id="@+id/instructionsOnboardingFragment"
        android:name="com.example.shoe_store.InstructionsOnboardingFragment"
        android:label="@string/instructions"
        tools:layout="@layout/fragment_instructions_onboarding">
        <action
            android:id="@+id/action_instructionsOnboardingFragment_to_shoeListingFragment"
            app:destination="@id/shoeListingFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_in_right"
            app:popEnterAnim="@anim/slide_out_right"
            app:popExitAnim="@anim/slide_out_left"
            app:popUpTo="@id/welcomeOnboardingFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/shoeListingFragment"
        android:name="com.example.shoe_store.ShoeListingFragment"
        android:label="Shoes List"
        tools:layout="@layout/fragment_shoe_listing">
        <action
            android:id="@+id/action_shoeListingFragment_to_loginScreenFragment"
            app:destination="@id/loginScreenFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_in_right"
            app:popUpTo="@id/shoeListingFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_shoeListingFragment_to_shoeDetailFragment"
            app:destination="@id/shoeDetailFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_in_right"
            app:popEnterAnim="@anim/slide_out_right"
            app:popExitAnim="@anim/slide_out_left" />
    </fragment>
    <fragment
        android:id="@+id/shoeDetailFragment"
        android:name="com.example.shoe_store.ShoeDetailFragment"
        android:label="Shoe Detail"
        tools:layout="@layout/fragment_shoe_detail"/>
</navigation>